--- a/network-health/compose-files/docker-compose-node1.yml
+++ b/network-health/compose-files/docker-compose-node1.yml
@@ -125,6 +125,7 @@ services:
         container_name: cli
         image: hyperledger/fabric-tools
         tty: true
+        dns_search: .
         environment:
           - GOPATH=/opt/gopath
           - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
