--- a/network-health/compose-files/docker-compose-base.yml
+++ b/network-health/compose-files/docker-compose-base.yml
@@ -62,7 +62,7 @@ services:
             - $GOPATH/src/github.com/hyperledger/fabric/:/opt/gopath/src/github.com/hyperledger/fabric/
             - ../crypto-config/:/var/hyperledger/configs
             - ../channel-artifacts/:/var/hyperledger/configs
-        command: peer node start
+        command: peer node start --peer-chaincodedev=true
         ports:
             - '7051'
             - '7053'
