docker deploy feature

--- a/network-health/compose-files/docker-compose-pc3.yml
+++ b/network-health/compose-files/docker-compose-pc3.yml
@@ -37,6 +37,14 @@ services:
         ports:
           - 7051:7051
           - 7053:7053 
+        deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+              condition: on-failure
+            placement:
+                constraints:
+                    - node.hostname == $RESEARCH_HOSTNAME
 
       
     peer1.research.healthcare.com:
@@ -67,6 +75,14 @@ services:
         ports:
             - 8051:7051
             - 8053:7053
+        deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+              condition: on-failure
+            placement:
+                constraints:
+                    - node.hostname == $RESEARCH_HOSTNAME
 
     cli:
        container_name: cli
@@ -94,3 +110,11 @@ services:
          - peer1.research.healthcare.com
        networks:
            - healthNetwork
+       deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+              condition: on-failure
+            placement:
+                constraints:
+                    - node.hostname == $RESEARCH_HOSTNAME
