--- a/network-health/compose-files/docker-compose-pc1.yml
+++ b/network-health/compose-files/docker-compose-pc1.yml
@@ -32,6 +32,14 @@ services:
         - ./crypto-config/peerOrganizations/hprovider.health.com/ca/:/etc/hyperledger/fabric-ca-server-config/ca
       networks:
         - healthNetwork
+      deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+              condition: on-failure
+            placement:
+                constraints:
+                    - node.hostname == $HPROVIDER_HOSTNAME
     
     ca.research.healthcare.com:
       container_name: ca.research.healthcare.com
@@ -55,31 +63,48 @@ services:
         - ./crypto-config/peerOrganizations/research.health.com/ca/:/etc/hyperledger/fabric-ca-server-config/ca
       networks:
         - healthNetwork
+      deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+              condition: on-failure
+            placement:
+                constraints:
+                    - node.hostname == $RESEARCH_HOSTNAME
     
-    cli:
-        container_name: cli
-        image: hyperledger/fabric-tools
-        tty: true
-        dns_search: .
-        environment:
-          - GOPATH=/opt/gopath
-          - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-          - CORE_LOGGING_LEVEL=DEBUG
-          - CORE_PEER_ID=cli
-          - CORE_PEER_ADDRESS=peer0.hprovider.healthcare.com:7051
-          - CORE_PEER_LOCALMSPID=HProviderMSP
-          - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/users/Admin@hprovider.healthcare.com/msp
-          - CORE_CHAINCODE_KEEPALIVE=10
-        working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
-        command: /bin/bash
-        volumes:
-            - /var/run/:/host/var/run/
-            - ../chaincode/:/opt/gopath/src/github.com/chaincode/
-            - $GOPATH/src/github.com/hyperledger/fabric/:/opt/gopath/src/github.com/hyperledger/fabric/
-            - ../crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
-            - ../channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts/
-        depends_on:
-          - ca.hprovider.healthcare.com
-          - ca.research.healthcare.com
-        networks:
-          - healthNetwork
+    # cli:
+    #     container_name: cli
+    #     image: hyperledger/fabric-tools
+    #     tty: true
+    #     dns_search: .
+    #     environment:
+    #       - GOPATH=/opt/gopath
+    #       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+    #       - CORE_LOGGING_LEVEL=DEBUG
+    #       - CORE_PEER_ID=cli
+    #       - CORE_PEER_ADDRESS=peer0.hprovider.healthcare.com:7051
+    #       - CORE_PEER_LOCALMSPID=HProviderMSP
+    #       - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/hprovider.healthcare.com/users/Admin@hprovider.healthcare.com/msp
+    #       - CORE_CHAINCODE_KEEPALIVE=10
+    #     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    #     command: /bin/bash
+    #     volumes:
+    #         - /var/run/:/host/var/run/
+    #         - ../chaincode/:/opt/gopath/src/github.com/chaincode/
+    #         - $GOPATH/src/github.com/hyperledger/fabric/:/opt/gopath/src/github.com/hyperledger/fabric/
+    #         - ../crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
+    #         - ../channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts/
+    #     depends_on:
+    #       - ca.hprovider.healthcare.com
+    #       - ca.research.healthcare.com
+    #     networks:
+    #       - healthNetwork
+        
+    #     deploy:
+    #         mode: replicated
+    #         replicas: 1
+    #         restart_policy:
+    #           condition: on-failure
+    #         placement:
+    #             constraints:
+    #                 - node.hostname == $HPROVIDER_HOSTNAME
