--- a/network-health/compose-files/docker-compose-pc2.yml
+++ b/network-health/compose-files/docker-compose-pc2.yml
@@ -40,6 +40,14 @@ services:
         ports:
           - 7051:7051
           - 7053:7053 
+        deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+              condition: on-failure
+            placement:
+                constraints:
+                    - node.hostname == $HPROVIDER_HOSTNAME
     
 
     peer1.hprovider.healthcare.com:
@@ -73,6 +81,14 @@ services:
         ports:
             - 8051:7051
             - 8053:7053
+        deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+              condition: on-failure
+            placement:
+                constraints:
+                    - node.hostname == $HPROVIDER_HOSTNAME
     
     cli:
         container_name: cli
@@ -101,3 +117,11 @@ services:
           - peer1.hprovider.healthcare.com
         networks:
           - healthNetwork
+        deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+              condition: on-failure
+            placement:
+                constraints:
+                    - node.hostname == $HPROVIDER_HOSTNAME
