--- a/network-health/compose-files/docker-compose-base.yml
+++ b/network-health/compose-files/docker-compose-base.yml
@@ -35,6 +35,15 @@ services:
         command: orderer
         ports:
           - '7050'
+        deploy:
+            mode: replicated
+            replicas: 1
+            restart_policy:
+              condition: on-failure
+            placement:
+                constraints:
+                    - node.hostname == $ORDERER_HOSTNAME
+        
 
     peer:
         image: hyperledger/fabric-peer
