--- a/network-health/compose-files/docker-compose-pc3.yml
+++ b/network-health/compose-files/docker-compose-pc3.yml
@@ -10,9 +10,6 @@ networks:
 
 services:   
     peer0.research.healthcare.com:
-        extends:
-            file: docker-compose-base.yml
-            service: peer
         container_name: peer0.research.healthcare.com
         environment:
             - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
@@ -68,11 +65,24 @@ services:
 
       
     peer1.research.healthcare.com:
-        extends:
-            file: docker-compose-base.yml
-            service: peer
         container_name: peer1.research.healthcare.com
         environment:
+            - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+            - CORE_PEER_NETWORKID=healthNetwork
+            - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=healthNetwork
+            - CORE_PEER_ADDRESSAUTODETECT=true
+            - CORE_PEER_PROFILE_ENABLED=true
+            - CORE_PEER_MSPCONFIGPATH=/var/hyperledger/msp
+            #- CORE_LEDGER_STATE_STATEDATABASE=LevelDB
+            - CORE_LOGGING_LEVEL=DEBUG
+            - CORE_LOGGING_GOSSIP=WARNING
+            - CORE_LOGGING_MSP=DEBUG
+            # TLS settings
+            - CORE_PEER_TLS_ENABLED=false
+            - CORE_PEER_TLS_CLIENTAUTHREQUIRED=false
+            - CORE_PEER_TLS_CERT_FILE=/var/hyperledger/tls/server.crt
+            - CORE_PEER_TLS_KEY_FILE=/var/hyperledger/tls/server.key
+            - CORE_PEER_TLS_ROOTCERT_FILE=/var/hyperledger/tls/ca.crt
             - CORE_PEER_CHAINCODELISTENADDRESS=peer1.research.healthcare.com:7053
             - CORE_PEER_ID=peer1.research.healthcare.com
             - CORE_PEER_ADDRESS=peer1.research.healthcare.com:7051
