--- a/network-health/compose-files/docker-compose-pc3.yml
+++ b/network-health/compose-files/docker-compose-pc3.yml
@@ -10,6 +10,7 @@ networks:
 
 services:   
     peer0.research.healthcare.com:
+        image: hyperledger/fabric-peer
         container_name: peer0.research.healthcare.com
         environment:
             - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
@@ -65,6 +66,7 @@ services:
 
       
     peer1.research.healthcare.com:
+        image: hyperledger/fabric-peer
         container_name: peer1.research.healthcare.com
         environment:
             - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
