--- a/network-health/compose-files/docker-compose-pc4.yml
+++ b/network-health/compose-files/docker-compose-pc4.yml
@@ -10,6 +10,7 @@ networks:
 
 services:
     peer0.patient.healthcare.com:
+        image: hyperledger/fabric-peer
         container_name: peer0.patient.healthcare.com
         environment:
             - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
@@ -64,9 +65,7 @@ services:
                     - node.hostname == $PATIENT_HOSTNAME
 
     peer1.patient.healthcare.com:
-        extends:
-            file: docker-compose-base.yml
-            service: peer
+        image: hyperledger/fabric-peer
         container_name: peer1.patient.healthcare.com
         environment:
             - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
