--- a/network-health/compose-files/docker-compose-node1.yml
+++ b/network-health/compose-files/docker-compose-node1.yml
@@ -1,6 +1,7 @@
 version: '2'
 
 volumes: 
+  orderer.healthcare.com:
   ca.hprovider.healthcare.com:
   peer0.hprovider.healthcare.com:
   peer1.hprovider.healthcare.com:
@@ -11,6 +12,49 @@ networks:
 
 services:
     
+    orderer.healthcare.com:
+      image: hyperledger/fabric-orderer
+      environment:
+          - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=deployment_fabric
+          - ORDERER_HOME=/var/hyperledger/orderer
+          - ORDERER_GENERAL_LOGLEVEL=debug
+          - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/msp
+          - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
+          - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
+          - ORDERER_GENERAL_LISTENPORT=7050
+          - ORDERER_GENERAL_LEDGERTYPE=ram
+          - ORDERER_GENERAL_GENESISMETHOD=file
+          - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/configs/genesis.block
+          - CONFIGTX_ORDERER_ORDERERTYPE=solo
+          - CONFIGTX_ORDERER_BATCHSIZE_MAXMESSAGECOUNT=10
+          - CONFIGTX_ORDERER_BATCHTIMEOUT=2s
+          - CONFIGTX_ORDERER_ADDRESSES=[127.0.0.1:7050]
+          # TLS settings
+          - ORDERER_GENERAL_TLS_ENABLED=false
+          - ORDERER_GENERAL_TLS_PRIVATEKEY=/var/hyperledger/tls/server.key
+          - ORDERER_GENERAL_TLS_CERTIFICATE=/var/hyperledger/tls/server.crt
+          - ORDERER_GENERAL_TLS_ROOTCAS=[/var/hyperledger/tls/ca.crt]
+          - ORDERER_TLS_CLIENTAUTHREQUIRED=false
+          - ORDERER_TLS_CLIENTROOTCAS_FILES=/var/hyperledger/users/Admin@healthcare.com/tls/ca.crt
+          - ORDERER_TLS_CLIENTCERT_FILE=/var/hyperledger/users/Admin@healthcare.com/tls/client.crt
+          - ORDERER_TLS_CLIENTKEY_FILE=/var/hyperledger/users/Admin@healthcare.com/tls/client.key           
+      working_dir: /opt/gopath/src/github.com/hyperledger/fabric/orderer
+      command: orderer
+      ports:
+        - '7050'
+      container_name: orderer.healthcare.com
+      environment:
+          - ORDERER_HOST=orderer.healthcare.com
+      volumes:
+          - ../crypto-config/ordererOrganizations/healthcare.com/users:/var/hyperledger/users
+          - ../crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/msp:/var/hyperledger/msp
+          - ../crypto-config/ordererOrganizations/healthcare.com/orderers/orderer.healthcare.com/tls:/var/hyperledger/tls
+          - ../channel-artifacts/:/var/hyperledger/configs
+      networks:
+        - healthNetwork
+      ports:
+        - 7050:7050    
+
     ca.hprovider.healthcare.com:
       container_name: ca.hprovider.healthcare.com
       image: hyperledger/fabric-ca:1.4.0
@@ -64,7 +108,6 @@ services:
           - healthNetwork
         ports:
           - 7051:7051
-          - 7053:7053 
 
     peer1.hprovider.healthcare.com:
         extends:
@@ -96,7 +139,6 @@ services:
           - healthNetwork
         ports:
             - 8051:7051
-            - 8053:7053 
     
     cli:
         container_name: cli
@@ -121,6 +163,7 @@ services:
             - ../crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
             - ../channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts/
         depends_on:
+          - orderer.healthcare.com
           - ca.hprovider.healthcare.com
           - peer0.hprovider.healthcare.com
           - peer1.hprovider.healthcare.com
