--- a/network-health/.gitignore
+++ b/network-health/.gitignore
@@ -1,3 +1,3 @@
-./network-health/channel-artifacts
-./network-health/bin
-./network-health/crypto-config
+./channel-artifacts
+./bin
+./crypto-config
