--- a/hyperledger-BCShield/network/docker-compose.yaml
+++ b/hyperledger-BCShield/network/docker-compose.yaml
@@ -90,18 +90,17 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.hprovider.healthcare.com:7041
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.hprovider:7984
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.hprovider:5984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer0.hprovider
+    depends_on:
+      - couchdb.peer0.hprovider
     ports:
       - 7051:7051
-      - 7053:7053
     networks:
       - healthNetwork
 
@@ -109,13 +108,13 @@ services:
     container_name: couchdb.peer0.hprovider
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      - DB_URL=http://localhost:7984/member_db
-      - COUCHDB_USER=admin
+      - DB_URL=http://localhost:5984/member_db
+      - COUCHDB_USER=peer0Hprovider
       - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer0.hprovider/:/opt/couchdb/data
     ports:
-      - "7984:5984"
+      - "5984:5984"
     networks:
       - healthNetwork
       
@@ -131,18 +130,17 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.hprovider.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.hprovider:8984
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.hprovider:6984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer1.hprovider
+    depends_on:
+      - couchdb.peer1.hprovider
     ports:
-      - 7056:7051
-      - 7058:7053
+      - 8051:8051
     networks:
       - healthNetwork
 
@@ -150,13 +148,13 @@ services:
     container_name: couchdb.peer1.hprovider
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      - DB_URL=http://localhost:8984/member_db
+      - DB_URL=http://localhost:6984/member_db
       - COUCHDB_USER=peer1Hprovider
       - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
-      - "8984:5984"
+      - "6984:5984"
     networks:
       - healthNetwork
   
@@ -172,18 +170,17 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.hprovider.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.hprovider:8985
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.hprovider:7984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer2.hprovider
+    depends_on:
+      - couchdb.peer2.hprovider
     ports:
-      - 7061:7051
-      - 7063:7053
+      - 9051:9051
     networks:
       - healthNetwork
 
@@ -191,13 +188,13 @@ services:
     container_name: couchdb.peer2.hprovider
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      - DB_URL=http://localhost:8985/member_db
+      - DB_URL=http://localhost:7984/member_db
       - COUCHDB_USER=peer2Hprovider
       - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
-      - "8985:5984"
+      - "7985:5984"
     networks:
       - healthNetwork
 
@@ -212,18 +209,17 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.hprovider.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer3.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.hprovider:8986
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.hprovider:8984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer3.hprovider
+    depends_on:
+      - couchdb.peer3.hprovider
     ports:
-      - 7065:7051
-      - 7068:7053
+      - 10051:10051
     networks:
       - healthNetwork
 
@@ -231,13 +227,13 @@ services:
     container_name: couchdb.peer3.hprovider
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      - DB_URL=http://localhost:8986/member_db
+      - DB_URL=http://localhost:8984/member_db
       - COUCHDB_USER=peer3Hprovider
       - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
-      - "8986:5984"
+      - "8984:5984"
     networks:
       - healthNetwork
 
@@ -252,18 +248,17 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.research.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.research:8059
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.research:9984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer0.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer0.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/research.healthcare.com/peers/peer0.research.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer0.research
+    depends_on:
+      - couchdb.peer0.research
     ports:
-      - 7071:7051
-      - 7073:7053
+      - 11051:11051
     networks:
       - healthNetwork
 
@@ -271,13 +266,13 @@ services:
     container_name: couchdb.peer0.research
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      - DB_URL=http://localhost:8059/member_db
+      - DB_URL=http://localhost:9984/member_db
       - COUCHDB_USER=peer0Research
       - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
-      - "8059:5984"
+      - "9984:5984"
     networks:
       - healthNetwork
 
@@ -292,32 +287,32 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.research.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.research:8069
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.research:10984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer1.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer1.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/research.healthcare.com/peers/peer1.research.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer1.research
+    depends_on:
+      - couchdb.peer1.research
+    ports:
+      - 12051:12051
     networks:
       - healthNetwork
-    ports:
-      - 7075:7051
-      - 7078:7053
+   
 
   couchdb.peer1.research:
     container_name: couchdb.peer1.research
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      - DB_URL=http://localhost:8069/member_db
+      - DB_URL=http://localhost:10984/member_db
       - COUCHDB_USER=peer1Research
       - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
-      - "8069:5984"
+      - "10984:5984"
     networks:
       - healthNetwork
 
@@ -332,32 +327,31 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.research.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.research:8079
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.research:11984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer2.research
+    depends_on:
+      - couchdb.peer2.research
     networks:
       - healthNetwork
     ports:
-      - 7081:7051
-      - 7083:7053
+      - 13051:13051
 
   couchdb.peer2.research:
     container_name: couchdb.peer2.research
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      - DB_URL=http://localhost:8079/member_db
+      - DB_URL=http://localhost:11984/member_db
       - COUCHDB_USER=peer2Research
       - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer2.hprovider/:/opt/couchdb/data
     ports:
-      - "8079:5984"
+      - "11984:5984"
     networks:
       - healthNetwork
 
@@ -372,32 +366,31 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.research.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer3.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.research:8175
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.research:12984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer3.research
+    depends_on:
+      - couchdb.peer3.research
     networks:
       - healthNetwork
     ports:
-      - 8085:7051
-      - 8088:7053
+      - 14051:14051
 
   couchdb.peer3.research:
     container_name: couchdb.peer3.research
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      - DB_URL=http://localhost:8175/member_db
+      - DB_URL=http://localhost:12984/member_db
       - COUCHDB_USER=peer3Research
       - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer3.hprovider/:/opt/couchdb/data
     ports:
-      - "8175:5984"
+      - "12984:5984"
     networks:
       - healthNetwork
 
