--- a/hyperledger-BCShield/network/docker-compose.yaml
+++ b/hyperledger-BCShield/network/docker-compose.yaml
@@ -109,7 +109,7 @@ services:
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
       - DB_URL=http://localhost:5984/member_db
-      - COUCHDB_USER=peer0Hprovider
+      - COUCHDB_USER=admin
       - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer0.hprovider/:/opt/couchdb/data
