--- a/hyperledger-BCShield/network/peer-base.yaml
+++ b/hyperledger-BCShield/network/peer-base.yaml
@@ -3,6 +3,7 @@ version: '2'
 services:
   peer-base:
     image: hyperledger/fabric-peer:$IMAGE_TAG
+    dns_search: .
     environment:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       # the following setting starts chaincode containers on the same
@@ -18,5 +19,7 @@ services:
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
+      - GODEBUG=netdns=go
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer    
     command: peer node start --peer-chaincodedev=true
+    
