--- a/hyperledger-BCShield/network/configtx.yaml
+++ b/hyperledger-BCShield/network/configtx.yaml
@@ -13,12 +13,33 @@ Organizations:
         ID: OrdererHpMSP
         # MSPDir is the filesystem path which contains the MSP configuration
         MSPDir: crypto-config/ordererOrganizations/healthcare.com/msp
+        Policies:
+            Readers:
+                Type: Signature
+                Rule: "OR('OrdererHpMSP.member')"
+            Writers:
+                Type: Signature
+                Rule: "OR('OrdererHpMSP.member')"
+            Admins:
+                Type: Signature
+                Rule: "OR('OrdererHpMSP.admin')"
+
 
     - &HProvider        
         Name: HProviderMSP
         # ID to load the MSP definition as
         ID: HProviderMSP
         MSPDir: crypto-config/peerOrganizations/hprovider.healthcare.com/msp
+        Policies:
+            Readers:
+                Type: Signature
+                Rule: "OR('HProviderMSP.admin', 'HProviderMSP.peer', 'HProviderMSP.client')"
+            Writers:
+                Type: Signature
+                Rule: "OR('HProviderMSP.admin', 'HProviderMSP.client')"
+            Admins:
+                Type: Signature
+                Rule: "OR('HProviderMSP.admin')"
         AnchorPeers:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
@@ -31,6 +52,16 @@ Organizations:
         # ID to load the MSP definition as
         ID: ResearchMSP
         MSPDir: crypto-config/peerOrganizations/research.healthcare.com/msp
+        Policies:
+            Readers:
+                Type: Signature
+                Rule: "OR('ResearchMSP.admin', 'ResearchMSP.peer', 'ResearchMSP.client')"
+            Writers:
+                Type: Signature
+                Rule: "OR('ResearchMSP.admin', 'ResearchMSP.client')"
+            Admins:
+                Type: Signature
+                Rule: "OR('ResearchMSP.admin')"
         AnchorPeers:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
@@ -82,6 +113,22 @@ Application: &ApplicationDefaults
     # Organizations is the list of orgs which are defined as participants on
     # the application side of the network
     Organizations:
+    Policies:
+        Readers:
+            Type: ImplicitMeta
+            Rule: "ANY Readers"
+        Writers:
+            Type: ImplicitMeta
+            Rule: "ANY Writers"
+        Admins:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Admins"
+        LifecycleEndorsement:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Endorsement"
+        Endorsement:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Endorsement"
 
 ################################################################################
 #
@@ -127,6 +174,53 @@ Orderer: &OrdererDefaults
     # Organizations is the list of orgs which are defined as participants on
     # the orderer side of the network
     Organizations:
+    Policies:
+        Readers:
+            Type: ImplicitMeta
+            Rule: "ANY Readers"
+        Writers:
+            Type: ImplicitMeta
+            Rule: "ANY Writers"
+        Admins:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Admins"
+        # BlockValidation specifies what signatures must be included in the block
+        # from the orderer for the peer to validate it.
+        BlockValidation:
+            Type: ImplicitMeta
+            Rule: "ANY Writers"
+
+
+################################################################################
+#
+#   Channel
+#
+#   - Different configuration profiles may be encoded here to be specified
+#   as parameters to the configtxgen tool
+#
+################################################################################
+Channel: &ChannelDefaults
+    # Policies defines the set of policies at this level of the config tree
+    # For Channel policies, their canonical path is
+    #   /Channel/<PolicyName>
+    Policies:
+        # Who may invoke the 'Deliver' API
+        Readers:
+            Type: ImplicitMeta
+            Rule: "ANY Readers"
+        # Who may invoke the 'Broadcast' API
+        Writers:
+            Type: ImplicitMeta
+            Rule: "ANY Writers"
+        # By default, who may modify elements at this config level
+        Admins:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Admins"
+    
+    
+    Capabilities:
+        <<: *ChannelCapabilities
+
 
 ################################################################################
 #
@@ -136,11 +230,11 @@ Orderer: &OrdererDefaults
 #   as parameters to the configtxgen tool
 #
 ################################################################################
+
 Profiles:
 
     HealthOrdererGenesis:
-        Capabilities:
-            <<: *ChannelCapabilities
+        <<: *ChannelDefaults
         Orderer:
             <<: *OrdererDefaults
             Organizations:
